--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.jpg" />
     <title>Mayorista de Alimentos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,9 +14,13 @@
 
 <body>
     <header>
-        <img src="./assets/ada_logo.png" alt="Logo de ADA" class="logo">
-        <h1>Bienvenido a ADA</h1>
-        <p>¡Solucionando necesidades logísticas desde 2018!</p>
+        <div id="cabecera">
+            <img id="logo" src="./assets/logo.jpg" alt="Logo">
+            <div>
+                <p id="name">MAYORISTA DE ALIMENTOS</p>
+                <p>¡del campo a la mesa con excelente calidad!</p>
+            </div>
+        </div>
     </header>
 
     <nav>
@@ -28,13 +33,15 @@
     </nav>
 
     <section>
+        <h1>Bienvenido a MAYORISTA DE ALIMENTOS</h1>
         <div class="estilo-parrafo">
-            <p>En ADA nos dedicamos a solucionar necesidades logísticas, brindando servicios en las provincias del
-                Nordeste Argentino, potenciando los volúmenes de venta en la región, y ofreciendo nuestro servicio de
-                transporte integral, cumpliendo con las exigencias de cada cliente.</p>
+            <p>En mayorista de alimentos nos encargamos de la venta mayorista de alimentos directamente desde los
+                productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
+                alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
+                mejor precio.</p>
         </div>
-        <p>Lo difícil lo hacemos en el acto, lo imposible tardamos un poco más.</p>
-        <img src="./assets/camion_ada.png" alt="Otra imagen" class="otra-imagen">
+        <p>Siempre los productos de la mejor calidad.</p>
+        <img src="./assets/Alimentos.png" alt="Canasta Alimentos">
     </section>
 
     <footer>
