--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.jpg" />
     <title>Mayorista de Alimentos</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 
@@ -45,11 +47,16 @@
     </section>
 
     <footer>
-        <div class="footer-content">
+        <div>
             <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
             <span>Ignacio Velazquez logo redes / Sebastian logo redes / Jaime logo redes</span>
         </div>
     </footer>
+
+    <script src="./script.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
