--- a/empresa.html
+++ b/empresa.html
@@ -26,12 +26,12 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./empresa.html">Empresa</a></li>
-            <li><a href="./productos.html">Productos</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+        <div class="flex-container">
+            <div><a href="./index.html">Home</a></div>
+            <div><a href="./empresa.html">Empresa</a></div>
+            <div><a href="./productos.html">Productos</a></div>
+            <div><a href="./contacto.html">Contacto</a></div>
+        </div>
     </nav>
 
     <section>
