--- a/contacto.html
+++ b/contacto.html
@@ -176,11 +176,37 @@
     </section>
 
     <footer>
-        <div>
-            <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
-            <span>Ignacio Velazquez logo redes / Sebastian logo redes / Jaime logo redes</span>
+        <div class="grid-container">
+            <div class="curso-area">
+                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
+            </div>
+            <div class="redes-area">
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"
+                        style="color: #4a8645;"></i></a>
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook"
+                        style="color: #4a8645;"></i></a>
+                <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-square-whatsapp"
+                        style="color: #4a8645;"></i></a>
+            </div>
+            <div class="integrante1-area">
+                <p>Ignacio Velazquez</p>
+                <a href="https://github.com/jignaciovelazquez" target="_blank"><i class="fa-brands fa-github"
+                        style="color: #4a8645"></i></a>
+            </div>
+            <div class="integrante2-area">
+                <p>Sebastian</p>
+                <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
+                        style="color: #4a8645"></i></a>
+            </div>
+            <div class="integrante3-area">
+                <p>Jaime</p>
+                <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
+                        style="color: #4a8645"></i></a>
+            </div>
         </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
 
     <script src="./script.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
