--- a/contacto.html
+++ b/contacto.html
@@ -40,6 +40,7 @@
         </div>
         <div class="container-xxl text-center">
             <h1 id="H1_CONTACT">CONTÁCTANOS</h1>
+            <div id="ALERTA" class="row mt-3"></div>
             <form id="CONTACT_FORM" class="row g-2 needs-validation" onsubmit="return false" novalidate>
 
                 <div class="col-12 position-relative">
@@ -111,10 +112,10 @@
                         <div class="col-sm-2">
                             <select id="EDIFPROGRA" class="form-select" required>
                                 <option selected disabled value="">Seleccione</option>
-                                <option value="8">8-10</option>
-                                <option value="10">10-12</option>
-                                <option value="14">14-16</option>
-                                <option value="16">16-18</option>
+                                <option value="8 y 10">8-10</option>
+                                <option value="10 y 12">10-12</option>
+                                <option value="14 y 16">14-16</option>
+                                <option value="16 y 18">16-18</option>
                             </select>
                             <div class="invalid-tooltip">
                                 ¡Debes indicar en que horario te podemos llamar!
@@ -207,10 +208,15 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
-
     <script src="./script.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
 </body>
 
