--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="flex-container">
             <div><a href="./index.html">Home</a></div>
             <div><a href="./empresa.html">Empresa</a></div>
-            <div><a href="./productos.html">Productos</a></div>
+            <div><a href="./nuestrosProductos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
         </div>
     </nav>
