--- a/contacto.html
+++ b/contacto.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +27,7 @@
         <div class="flex-container">
             <div><a href="./index.html">Home</a></div>
             <div><a href="./empresa.html">Empresa</a></div>
-            <div><a href="./productos.html">Productos</a></div>
+            <div><a href="./nuestrosProductos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
         </div>
     </nav>
