--- a/empresa.html
+++ b/empresa.html
@@ -18,7 +18,7 @@
             <img id="logo" src="./assets/logo.jpg" alt="Logo">
             <div>
                 <p id="name">MAYORISTA DE ALIMENTOS</p>
-                <p>¡del campo a la mesa con excelente calidad!</p>
+                <h5><p>¡La calidad del campo en tu mesa!</p></h5>
             </div>
         </div>
     </header>
@@ -27,7 +27,7 @@
         <div class="flex-container">
             <div><a href="./index.html">Home</a></div>
             <div><a href="./empresa.html">Empresa</a></div>
-            <div><a href="./nuestrosProductos.html">Productos</a></div>
+            <div><a href="./productos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
         </div>
     </nav>
