--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.jpg" />
     <title>Mayorista de Alimentos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,10 +15,12 @@
 <body>
     <header>
         <div id="cabecera">
-            <img id="logo" src="./assets/logo.jpg" alt="Logo">
+            <img id="logo" src="./assets/img/logo.jpg" alt="Logo">
             <div>
                 <p id="name">MAYORISTA DE ALIMENTOS</p>
-                <h5><p>¡La calidad del campo en tu mesa!</p></h5>
+                <h5>
+                    <p>¡La calidad del campo en tu mesa!</p>
+                </h5>
             </div>
         </div>
     </header>
@@ -29,6 +31,7 @@
             <div><a href="./empresa.html">Empresa</a></div>
             <div><a href="./productos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
+            <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart" style="color: #054e0b"></i></a></div>
         </div>
     </nav>
 
