--- a/index.html
+++ b/index.html
@@ -2,127 +2,137 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="./assets/favicon.jpg">
-    <title>Mayorista de Alimentos</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/jpg" href="./assets/img/favicon.jpg">
+  <title>Mayorista de Alimentos</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 
 <body>
-    <header>
-        <div id="cabecera">
-            <img id="logo" src="./assets/logo.jpg" alt="Logo">
-            <div>
-                <p id="name">MAYORISTA DE ALIMENTOS</p>
-                <h5><p>¡La calidad del campo en tu mesa!</p></h5>
-            </div>
-        </div>
-    </header>
+  <header>
+    <div id="cabecera">
+      <img id="logo" src="./assets/img/logo.jpg" alt="Logo">
+      <div>
+        <p id="name">MAYORISTA DE ALIMENTOS</p>
+        <h5>
+          <p>¡La calidad del campo en tu mesa!</p>
+        </h5>
+      </div>
+    </div>
+  </header>
 
-    <nav>
-        <div class="flex-container">
-            <div><a href="./index.html">Home</a></div>
-            <div><a href="./empresa.html">Empresa</a></div>
-            <div><a href="./productos.html">Productos</a></div>
-            <div><a href="./contacto.html">Contacto</a></div>
-            <a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i></a>
-        </div>
-    </nav>
+  <nav>
+    <div class="flex-container">
+      <div><a href="./index.html">Home</a></div>
+      <div><a href="./empresa.html">Empresa</a></div>
+      <div><a href="./productos.html">Productos</a></div>
+      <div><a href="./contacto.html">Contacto</a></div>
+      <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart" style="color: #054e0b"></i></a></div>
+    </div>
+  </nav>
 
-    <section>
-        <h1>Bienvenido a MAYORISTA DE ALIMENTOS</h1>
-        <div class="estilo-parrafo">
-            <p>En mayorista de alimentos nos encargamos de la venta mayorista de alimentos directamente desde los
-                productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
-                alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
-                mejor precio.</p>
+  <section>
+    <h1>Bienvenido a MAYORISTA DE ALIMENTOS</h1>
+    <div class="estilo-parrafo">
+      <p>En mayorista de alimentos nos encargamos de la venta mayorista de alimentos directamente desde los
+        productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
+        alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
+        mejor precio.</p>
+    </div>
+    <p>Siempre los productos de la mejor calidad.</p>
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+          aria-label="Slide 6"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/img/Alimentos.png" class="d-block w-100" alt="...">
         </div>
-        <p>Siempre los productos de la mejor calidad.</p>
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/Alimentos.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/acelga.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/huvosCaseros.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/panFelipe.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/tomatesRedondos.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/aceiteDeOliva.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+        <div class="carousel-item">
+          <img src="./assets/img/acelga.jpg" class="d-block w-100" alt="...">
         </div>
-    </section>
+        <div class="carousel-item">
+          <img src="./assets/img/huvosCaseros.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/panFelipe.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/tomatesRedondos.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/aceiteDeOliva.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 
-    <footer>
-        <div class="grid-container">
-            <div class="curso-area">
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
-            </div>
-            <div class="redes-area">
-                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"
-                        style="color: #4a8645;"></i></a>
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook"
-                        style="color: #4a8645;"></i></a>
-                <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-square-whatsapp"
-                        style="color: #4a8645;"></i></a>
-            </div>
-            <div class="integrante1-area">
-                <p>Ignacio Velazquez</p>
-                <a href="https://github.com/jignaciovelazquez" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-            <div class="integrante2-area">
-                <p>Sebastian</p>
-                <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-            <div class="integrante3-area">
-                <p>Jaime</p>
-                <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-        </div>
-    </footer>
+  <footer>
+    <div class="grid-container">
+      <div class="curso-area">
+        <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
+      </div>
+      <div class="redes-area">
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"
+            style="color: #4a8645;"></i></a>
+        <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook"
+            style="color: #4a8645;"></i></a>
+        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-square-whatsapp"
+            style="color: #4a8645;"></i></a>
+      </div>
+      <div class="integrante1-area">
+        <p>Ignacio Velazquez</p>
+        <a href="https://github.com/jignaciovelazquez" target="_blank"><i class="fa-brands fa-github"
+            style="color: #4a8645"></i></a>
+      </div>
+      <div class="integrante2-area">
+        <p>Sebastian</p>
+        <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
+            style="color: #4a8645"></i></a>
+      </div>
+      <div class="integrante3-area">
+        <p>Jaime</p>
+        <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
+            style="color: #4a8645"></i></a>
+      </div>
+    </div>
+  </footer>
 
-    <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
