completado de EMPRESA

--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
             <div><a href="./empresa.html">Empresa</a></div>
             <div><a href="./productos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
-            <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart" style="color: #054e0b"></i></a></div>
+            <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i></a></div>
         </div>
     </nav>
 
@@ -196,7 +196,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante2-area">
-                <p>Sebastian</p>
+                <p>Sebastian Gomez</p>
                 <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
