--- a/empresa.html
+++ b/empresa.html
@@ -31,12 +31,54 @@
             <div><a href="./empresa.html">Empresa</a></div>
             <div><a href="./productos.html">Productos</a></div>
             <div><a href="./contacto.html">Contacto</a></div>
-            <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart" style="color: #054e0b"></i></a></div>
+            <div><a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i></a></div>
         </div>
     </nav>
 
     <section>
-        <h1>EMPRESA</h1>
+        <div class="grid-container-EMPRESA">
+
+            <div class="empresa-area">
+                <h1>EMPRESA</h1>
+                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Cumque sit nisi voluptates molestiae iure quo corporis nam. Eius quia,
+                    sint temporibus aspernatur, libero numquam optio aut, adipisci itaque quod tenetur. Lorem ipsum
+                    dolor sit, amet consectetur adipisicing elit. Iure perferendis, harum vitae quae delectus aliquam
+                    nemo ea architecto cupiditate velit corrupti! Exercitationem, culpa corrupti. Pariatur earum in
+                    delectus exercitationem laudantium.</p>
+            </div>
+
+            <div class="mision-area">
+                <h1>MISION</h1>
+                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
+                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
+                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
+                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
+                    sunt sed vitae.</p>
+            </div>
+
+            <div class="vision-area">
+                <h1>VISION</h1>
+                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
+                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
+                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
+                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
+                    sunt sed vitae.</p>
+            </div>
+
+            <div class="objetivos-area">
+                <h1>OBJETIVOS</h1>
+                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
+                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
+                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
+                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
+                    sunt sed vitae.</p>
+            </div>
+
+        </div>
 
     </section>
 
@@ -59,7 +101,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante2-area">
-                <p>Sebastian</p>
+                <p>Sebastian Gomez</p>
                 <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
