"git pull" 	modified:   empresa.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                 productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
                 alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
                 mejor precio.</p>
-        </div>
-        <p>Siempre los productos de la mejor calidad.</p>
-        <div id="carouselExampleIndicators" class="carousel slide">
+                <img src="./assets/Alimentos.png" alt="Canasta de alimentos">
+        <!--div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -79,7 +78,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-        </div>
+        </div-->
     </section>
 
     <footer>
@@ -101,7 +100,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante2-area">
-                <p>Sebastian</p>
+                <p>Sebastian Gomez</p>
                 <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
