--- a/empresa.html
+++ b/empresa.html
@@ -56,7 +56,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante2-area">
-                <p>Sebastian</p>
+                <p>Sebastian Gomez</p>
                 <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
