--- a/empresa.html
+++ b/empresa.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.jpg" />
     <title>Mayorista de Alimentos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -18,7 +22,9 @@
             <img id="logo" src="./assets/logo.jpg" alt="Logo">
             <div>
                 <p id="name">MAYORISTA DE ALIMENTOS</p>
-                <h5><p>¡La calidad del campo en tu mesa!</p></h5>
+                <h5>
+                    <p>¡La calidad del campo en tu mesa!</p>
+                </h5>
             </div>
         </div>
     </header>
@@ -33,7 +39,42 @@
     </nav>
 
     <section>
-        <h1>EMPRESA</h1>
+        <div class="grid-container-EMPRESA">
+
+            <div class="empresa-area">
+                <h1>Quienes somos</h1>
+                <p>Somos una empresa con más de 40 años de experiencia en el mercado hortofrutícola.
+                La actividad comercial se ha centrado en la venta al por mayor y distribución de la materia prima del campo a nivel nacional 
+                e internacional. Nuestros productos son de la más alta calidad procedentes de nuestros propios cultivos y de proveedores 
+                altamente calificados.
+                </p>
+            </div>
+
+            <div class="instalciones-area">
+                <h1>Instalaciones</h1>
+                <p>Contamos con instalaciones frigoríficas, donde realizamos todas las operaciones comerciales de venta al por mayor,
+                    con la más avanzada tecnología en maquinaria y con un equipo técnico-comercial altamente cualificado. 
+                    Ofrecemos un servicio de alta calidad a nuestros clientes, a través del compromiso, proximidad, innovación y ética profesional.
+                </p>
+            </div>
+
+            <div class="vision-area">
+                <h1>Vision</h1>
+                <p>Nuestro foco está  en el mercado, y nuestro compromiso es ser líder en la comercialización de nuetra materia prima
+                   de primera calida del campo a la mesa de los argentinos y del mundo entero. 
+                </p>
+            </div>
+
+            <div class="objetivos-area">
+                <h1>Objetivos</h1>
+                <p> nuesta exelente materia prima de la mejor calidad del campo, al mercado argentino de manera eficiente,
+                    acordando con nuestros clientes, contando con un personal altamente capacitado. Tomamos lo mejora de la productividad
+                    como nuestro deber. Con soluciones eficientes y sustentables, protegemos cuidadosamente nuestros productos y nos esforzamos
+                    por aumentar el rendimiento, con el objetivo de lograr un crecimiento mutuo donde todos ganen.
+                </p>
+            </div>
+
+        </div>
 
     </section>
 
