consolidacion de aportes

--- a/contacto.html
+++ b/contacto.html
@@ -49,9 +49,6 @@
                         <label for="NAME" class="col-sm-2 col-form-label text-start">Nombre:</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control" id="NAME" placeholder="Ingrese su Nombre" required>
-                            <div class="invalid-tooltip">
-                                ¡Debes ingresar tu Nombre!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,9 +59,6 @@
                         <div class="col-sm-5">
                             <input type="text" class="form-control" id="SURNAME" placeholder="Ingrese su Apellido"
                                 required>
-                            <div class="invalid-tooltip">
-                                ¡Debes ingresar tu Apellido!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -74,9 +68,6 @@
                         <label for="PHONE" class="col-sm-2 col-form-label text-start">Telefono:</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="PHONE" placeholder="1112345678 " required>
-                            <div class="invalid-tooltip">
-                                ¡Debes ingresar tu numero telefonico!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -87,9 +78,6 @@
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="ADDRESS" placeholder="Ingrese la Dirección"
                                 required>
-                            <div class="invalid-tooltip">
-                                ¡Debes ingresar tu Dirección!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -99,9 +87,6 @@
                         <label for="MAIL" class="col-sm-2 col-form-label text-start">Email:</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="MAIL" placeholder="Ingrese su Email" required>
-                            <div class="invalid-tooltip">
-                                ¡Debes ingresar tu Email!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -118,15 +103,9 @@
                                 <option value="14 y 16">14-16</option>
                                 <option value="16 y 18">16-18</option>
                             </select>
-                            <div class="invalid-tooltip">
-                                ¡Debes indicar en que horario te podemos llamar!
-                            </div>
                         </div>
                         <div class="col-sm-3">
                             <input type="date" class="form-control" id="FECHA" required>
-                            <div class="invalid-tooltip">
-                                ¡Debes indicar en que Fecha te podemos llamar!
-                            </div>
                         </div>
 
                         <div class="col-sm-2">
@@ -151,22 +130,10 @@
                         <label for="MESSAGE" class="col-sm-3 col-form-label text-start">Consulta:</label>
                         <textarea class="form-control" id="MESSAGE" rows="5" aria-describedby="button-addon2"
                             required></textarea>
-                        <div class="invalid-tooltip">
-                            ¡Debes indicar una consulta que quieras resolver!
-                        </div>
                     </div>
                 </div>
 
-                <div class="col-12 position-relative">
-                    <div class="row">
-                        <label for="formFile" class="form-label text-start">Puedes adjuntar una imagen para
-                            complementar
-                            tu consulta:</label>
-                        <input class="form-control" type="file" id="formFile">
-                    </div>
-                </div>
-
-                <div class="col-12 pt-2">
+                <div class="col-12 pt-2 mb-3">
                     <div class="row justify-content-center">
                         <div class="col-6 d-grid ">
                             <button id="SEND" type="submit" class="btn btn-success">ENVIAR</button>
@@ -201,7 +168,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante3-area">
-                <p>Jaime</p>
+                <p>Jaime Gonzales</p>
                 <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
