--- a/empresa.html
+++ b/empresa.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
-
 </head>
-
 
 <body>
     <header>
@@ -39,82 +34,79 @@
         </div>
     </nav>
 
-    <section>
-        <div class="grid-container-EMPRESA">
+    <section class="SECTION_EMPRESA">
 
-            <div class="empresa-area">
-<<<<<<< HEAD
-                <h1>Quienes somos</h1>
-                <p>Somos una empresa con más de 40 años de experiencia en el mercado hortofrutícola.
-                La actividad comercial se ha centrado en la venta al por mayor y distribución de la materia prima del campo a nivel nacional 
-                e internacional. Nuestros productos son de la más alta calidad procedentes de nuestros propios cultivos y de proveedores 
-                altamente calificados.
+        <div id=container>
+            <h2 class="subTitulo">QUIENES SOMOS </h2>
+            <div>
+                <p class="paragraph">
+                    Somos una empresa con más de 40 años de experiencia en el mercado hortofrutícola.<br>
+                    La actividad comercial se ha centrado en la venta al por mayor y distribución de frutas y verduras a
+                    nivel
+                    nacional.<br>
+                    Nuestros productos son de la más alta calidad procedentes de nuestros propios cultivos y de
+                    proveedores
+                    altamente calificados.
                 </p>
+                <div class="image"> <img src="./assets/img/equipo.jpg" alt="quienesomos"></div>
             </div>
+        </div>
 
-            <div class="instalciones-area">
-                <h1>Instalaciones</h1>
-                <p>Contamos con instalaciones frigoríficas, donde realizamos todas las operaciones comerciales de venta al por mayor,
-                    con la más avanzada tecnología en maquinaria y con un equipo técnico-comercial altamente cualificado. 
-                    Ofrecemos un servicio de alta calidad a nuestros clientes, a través del compromiso, proximidad, innovación y ética profesional.
+        <div id=container>
+            <h2 class="subTitulo">INSTALACIONES </h2>
+            <div>
+                <div class="image"> <img src="./assets/img/instalaciones.png" alt="fac"></div>
+                <p class="paragraph">
+                    Contamos con instalaciones frigoríficas, donde realizamos todas las operaciones comerciales de venta
+                    al por
+                    mayor,<br>
+                    con la más avanzada tecnología en maquinaria y con un equipo técnico-comercial altamente
+                    cualificado. <br>
+                    Ofrecemos un servicio de alta calidad a nuestros clientes, a través del compromiso, proximidad,
+                    innovación y
+                    ética profesional.
                 </p>
-            </div>
 
-            <div class="vision-area">
-                <h1>Vision</h1>
-                <p>Nuestro foco está  en el mercado, y nuestro compromiso es ser líder en la comercialización de nuetra materia prima
-                   de primera calida del campo a la mesa de los argentinos y del mundo entero. 
+            </div>
+        </div>
+
+        <div id=container>
+            <h2 class="subTitulo">MISIÓN Y VISIÓN </h2>
+            <div>
+                <p class="paragraph">
+                    Misión: <br>
+                    <br>
+                    Proveer frutas y verduras de excelente calidad, al mercado argentino de manera eficiente, acordando
+                    con
+                    nuestros clientes, <br>
+                    contando con un personal altamente capacitado. Tomamos la mejora de la productividad como nuestro
+                    deber. Con
+                    soluciones eficientes y sustentables, <br>
+                    protegemos cuidadosamente nuestros productos y nos esforzamos por aumentar el <br>
+                    rendimiento, con el objetivo de lograr un crecimiento mutuo donde todos ganen.<br>
+                    <br>
+                    Visión:<br>
+                    <br>
+                    Nuestro foco está en el mercado, y nuestro compromiso es ser un líder <br>
+                    en la comercialización de frutas y verduras en Argentina, asentando nuestra gestión <br>
+                    <br>
                 </p>
+                <div class="image"> <img src="./assets/img/misionvision.jpg" alt="fac"></div>
             </div>
+        </div>
 
-            <div class="objetivos-area">
-                <h1>Objetivos</h1>
-                <p> nuesta exelente materia prima de la mejor calidad del campo, al mercado argentino de manera eficiente,
-                    acordando con nuestros clientes, contando con un personal altamente capacitado. Tomamos lo mejora de la productividad
-                    como nuestro deber. Con soluciones eficientes y sustentables, protegemos cuidadosamente nuestros productos y nos esforzamos
-                    por aumentar el rendimiento, con el objetivo de lograr un crecimiento mutuo donde todos ganen.
-                </p>
-=======
-                <h1>EMPRESA</h1>
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Cumque sit nisi voluptates molestiae iure quo corporis nam. Eius quia,
-                    sint temporibus aspernatur, libero numquam optio aut, adipisci itaque quod tenetur. Lorem ipsum
-                    dolor sit, amet consectetur adipisicing elit. Iure perferendis, harum vitae quae delectus aliquam
-                    nemo ea architecto cupiditate velit corrupti! Exercitationem, culpa corrupti. Pariatur earum in
-                    delectus exercitationem laudantium.</p>
+        <div class="containerFinal">
+            <h2 class="subTitulo">VALORES </h2>
+            <div class="listavalores">
+                <ol>
+                    <ul>Honestidad / Amabilidad</ul>
+                    <ul>Seriedad / Profesionalismo</ul>
+                    <ul>Armonía en el trabajo</ul>
+                    <ul>Crecimiento continúo</ul>
+                    <ul>Trabajo en equipo</ul>
+                    <ul>Orientación a nuestros clientes</ul>
+                </ol>
             </div>
-
-            <div class="mision-area">
-                <h1>MISION</h1>
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
-                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
-                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
-                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
-                    sunt sed vitae.</p>
-            </div>
-
-            <div class="vision-area">
-                <h1>VISION</h1>
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
-                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
-                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
-                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
-                    sunt sed vitae.</p>
-            </div>
-
-            <div class="objetivos-area">
-                <h1>OBJETIVOS</h1>
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122 Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Aspernatur non perferendis cupiditate doloremque veritatis alias hic
-                    ad repellendus dolore corrupti. Harum repellendus nisi perferendis ex, eum eligendi? Maxime, sit
-                    eaque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut magni, sint non at commodi
-                    omnis doloremque temporibus explicabo natus neque, aliquid suscipit quisquam, sit et? Consequuntur
-                    sunt sed vitae.</p>
->>>>>>> 90ac9d9fd026aea3c9ff24ea704e499f2d4f2c40
-            </div>
-
         </div>
 
     </section>
@@ -143,7 +135,7 @@
                         style="color: #4a8645"></i></a>
             </div>
             <div class="integrante3-area">
-                <p>Jaime</p>
+                <p>Jaime Gonzales</p>
                 <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
                         style="color: #4a8645"></i></a>
             </div>
