--- a/index.html
+++ b/index.html
@@ -35,86 +35,6 @@
     </div>
   </nav>
 
-<<<<<<< HEAD
-    <section>
-        <h1>Bienvenido a MAYORISTA DE ALIMENTOS</h1>
-        <div class="estilo-parrafo">
-            <p>En mayorista de alimentos nos encargamos de la venta mayorista de alimentos directamente desde los
-                productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
-                alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
-                mejor precio.</p>
-                <img src="./assets/Alimentos.png" alt="Canasta de alimentos">
-        <!--div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/Alimentos.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/acelga.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/huvosCaseros.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/panFelipe.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/tomatesRedondos.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/aceiteDeOliva.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-        </div-->
-    </section>
-
-    <footer>
-        <div class="grid-container">
-            <div class="curso-area">
-                <p>JS-FRONT END 2024 1 - Trabajo Practico HTML, CSS, JS Comision 24122</p>
-            </div>
-            <div class="redes-area">
-                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"
-                        style="color: #4a8645;"></i></a>
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook"
-                        style="color: #4a8645;"></i></a>
-                <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-square-whatsapp"
-                        style="color: #4a8645;"></i></a>
-            </div>
-            <div class="integrante1-area">
-                <p>Ignacio Velazquez</p>
-                <a href="https://github.com/jignaciovelazquez" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-            <div class="integrante2-area">
-                <p>Sebastian Gomez</p>
-                <a href="https://github.com/spuchinni" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-            <div class="integrante3-area">
-                <p>Jaime</p>
-                <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
-                        style="color: #4a8645"></i></a>
-            </div>
-        </div>
-    </footer>
-=======
   <section>
     <h1>Bienvenido a MAYORISTA DE ALIMENTOS</h1>
     <div class="estilo-parrafo">
@@ -122,54 +42,8 @@
         productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
         alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
         mejor precio.</p>
-    </div>
-    <p>Siempre los productos de la mejor calidad.</p>
-    <div id="carouselExampleIndicators" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-          aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-          aria-label="Slide 5"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-          aria-label="Slide 6"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./assets/img/Alimentos.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/img/acelga.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/img/huvosCaseros.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/img/panFelipe.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/img/tomatesRedondos.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/img/aceiteDeOliva.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+      <img src="./assets/img/Alimentos.png" alt="Canasta de alimentos">
+
   </section>
 
   <footer>
@@ -196,13 +70,12 @@
             style="color: #4a8645"></i></a>
       </div>
       <div class="integrante3-area">
-        <p>Jaime</p>
+        <p>Jaime Gonzales</p>
         <a href="https://github.com/jagacast" target="_blank"><i class="fa-brands fa-github"
             style="color: #4a8645"></i></a>
       </div>
     </div>
   </footer>
->>>>>>> 90ac9d9fd026aea3c9ff24ea704e499f2d4f2c40
 
   <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
