--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 productores del campo a todos nuestros clientes, siempre garantizando la mayor calidad y frescura de los
                 alimentos, contamos con convenios con productores directamente lo que nos permite brindarles siempre el
                 mejor precio.</p>
-                <img src="./assets/Alimentos.png" alt="Canasta de alimentos">
+                <img src="./assets/img/Alimentos.png"Canasta de alimentos">
         <!--div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
